# modul_8_exam

./: pyproject.toml
apps/: serializers.py  urls.py  utils.py  views.py
apps/migrations/: 0001_initial.py
apps/models/: base.py  managers.py  models.py  users.py
root/: settings.py  urls.py
